--- a/goose.html
+++ b/goose.html
@@ -15,10 +15,10 @@
 
 
 <h3>Catering</h3>
-<p>You have fun.<end>We`ll handle the cooking</end>.Black Goose catering can handle events from snacks for a meeetup to elegant corporate fundraisers.
+<p>You have fun.<end>We`ll handle the cooking</end>.Black Goose catering can handle events from snacks for a meeetup to elegant corporate fundraisers.</p>
 
 <h4>Location and Hours</h4>
-<p>Seekonk,Massachusetts;Monday through Thursday 11am to 9pm;Friday and saturday,11am to midnight
+<p>Seekonk,Massachusetts;Monday through Thursday 11am to 9pm;Friday and saturday,11am to midnight</p>
 
 </body>
 </html>
